chore(url-to-pdf): Split functionality into source files

--- a/threaded-url-to-pdf/meson.build
+++ b/threaded-url-to-pdf/meson.build
@@ -9,10 +9,17 @@ general_deps = [
   dependency('absl_strings')
 ]
 
+source_files = [
+  'main.cpp',
+  'cli.cpp',
+  'pdf.cpp'
+]
+
 # artifacts
 
 test_exe = executable(
   'test1',
-  'main.cpp',
-  dependencies : general_deps
+  source_files,
+  dependencies : general_deps,
+  include_directories : include_directories('./')
 )
